[package]
name = "meme_machine"
version = "0.1.3"
authors = ["Paul Houghton <paulirotta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nannou = "0.12.0"
nannou = { git = "https://github.com/nannou-org/nannou.git" }
nannou_osc = "0.1.0"
meme_machine_database = {git = "https://github.com/N-of-1/meme_machine_database.git", version = "0.1.3"}

[profile.release]
opt-level = 3
lto = true
